@@ -5,48 +5,49 @@ import edu.illinois.library.cantaloupe.config.Key;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 
 /**
- * Used to obtain an instance of the current {@link Cache} according to the
- * application configuration.
+ * Used to obtain {@link Cache} instances according to the application
+ * configuration.
  */
-public abstract class CacheFactory {
+public final class CacheFactory {
 
-    private static Logger logger = LoggerFactory.getLogger(CacheFactory.class);
-
-    /** Lazy-initialized by {@link #getDerivativeCache()}. */
-    private static volatile DerivativeCache derivativeCache;
-
-    private static Thread derivativeCacheShutdownHook;
-
-    /** Lazy-initialized by {@link #getSourceCache()}. */
-    private static volatile SourceCache sourceCache;
-
-    private static Thread sourceCacheShutdownHook;
+    private static final Logger LOGGER =
+            LoggerFactory.getLogger(CacheFactory.class);
 
     /**
-     * @return Set of single instances of all available derivative caches.
+     * Initialized by {@link #getDerivativeCache()}.
+     */
+    private static volatile DerivativeCache derivativeCache;
+
+    /**
+     * Initialized by {@link #getSourceCache()}.
+     */
+    private static volatile SourceCache sourceCache;
+
+    /**
+     * @return Set of instances of all available derivative caches.
      */
     public static Set<DerivativeCache> getAllDerivativeCaches() {
         return new HashSet<>(Arrays.asList(
-                new AmazonS3Cache(),
                 new AzureStorageCache(),
                 new FilesystemCache(),
                 new HeapCache(),
                 new JdbcCache(),
-                new RedisCache()));
+                new RedisCache(),
+                new S3Cache()));
     }
 
     /**
      * @return Set of single instances of all available source caches.
      */
     public static Set<SourceCache> getAllSourceCaches() {
-        return new HashSet<>(
-                Collections.singletonList(new FilesystemCache()));
+        return new HashSet<>(Collections.singletonList(new FilesystemCache()));
     }
 
     /**
@@ -54,45 +55,49 @@ public abstract class CacheFactory {
      *
      * <p>This method respects live changes in application configuration.</p>
      *
-     * @return The shared DerivativeCache instance, or <code>null</code> if a
-     *         derivative cache is not available.
+     * @return The shared instance, or {@literal null} if a derivative cache
+     *         is not available.
      */
     public static DerivativeCache getDerivativeCache() {
-        // The implementation is explained in "Fixing Double-Checked Locking
-        // using Volatile":
-        // http://www.cs.umd.edu/~pugh/java/memoryModel/DoubleCheckedLocking.html
         DerivativeCache cache = null;
-        final Configuration config = Configuration.getInstance();
-        if (config.getBoolean(Key.DERIVATIVE_CACHE_ENABLED, false)) {
-            final String unqualifiedName =
-                    config.getString(Key.DERIVATIVE_CACHE);
-            if (unqualifiedName != null && unqualifiedName.length() > 0) {
-                final String qualifiedName =
-                        CacheFactory.class.getPackage().getName() + "." +
-                                unqualifiedName;
+
+        if (isDerivativeCacheEnabled()) {
+            final Configuration config = Configuration.getInstance();
+            final String unqualifiedName = config.getString(Key.DERIVATIVE_CACHE, "");
+
+            if (!unqualifiedName.isEmpty()) {
+                final String qualifiedName = getQualifiedName(unqualifiedName);
                 cache = derivativeCache;
                 if (cache == null ||
                         !cache.getClass().getName().equals(qualifiedName)) {
                     synchronized (CacheFactory.class) {
                         if (cache == null ||
                                 !cache.getClass().getName().equals(qualifiedName)) {
-                            logger.debug("getDerivativeCache(): " +
+                            LOGGER.debug("getDerivativeCache(): " +
                                     "implementation changed; creating a new " +
                                     "instance");
                             try {
-                                Class implClass = Class.forName(qualifiedName);
-                                cache = (DerivativeCache) implClass.newInstance();
+                                Class<?> implClass = Class.forName(qualifiedName);
+                                cache = (DerivativeCache)
+                                        implClass.getDeclaredConstructor().newInstance();
                                 setDerivativeCache(cache);
                             } catch (ClassNotFoundException e) {
                                 cache = null;
-                                logger.error("Class not found: {}", e.getMessage());
-                            } catch (IllegalAccessException | InstantiationException e) {
+                                LOGGER.error("Class not found: {}", e.getMessage());
+                            } catch (NoSuchMethodException |
+                                    IllegalAccessException |
+                                    InstantiationException |
+                                    InvocationTargetException e) {
                                 cache = null;
-                                logger.error(e.getMessage());
+                                LOGGER.error(e.getMessage());
                             }
                         }
                     }
                 }
+            } else {
+                LOGGER.warn("Derivative cache is enabled, but {} is not set",
+                        Key.DERIVATIVE_CACHE);
+                shutdownDerivativeCache();
             }
         }
         return cache;
@@ -103,40 +108,40 @@ public abstract class CacheFactory {
      *
      * <p>This method respects live changes in application configuration.</p>
      *
-     * @return The shared SourceCache instance, or <code>null</code> if a
-     *         source cache is not available.
+     * @return The shared instance, or {@literal null} if the source cache
+     *         implementation specified in the configuration is invalid or not
+     *         specified.
      */
     public static SourceCache getSourceCache() {
-        // The implementation is explained in "Fixing Double-Checked Locking
-        // using Volatile":
-        // http://www.cs.umd.edu/~pugh/java/memoryModel/DoubleCheckedLocking.html
         SourceCache cache = null;
+
         final Configuration config = Configuration.getInstance();
-        if (config.getBoolean(Key.SOURCE_CACHE_ENABLED, false)) {
-            final String unqualifiedName = config.getString(Key.SOURCE_CACHE);
-            if (unqualifiedName != null && unqualifiedName.length() > 0) {
-                final String qualifiedName =
-                        CacheFactory.class.getPackage().getName() + "." +
-                                unqualifiedName;
-                cache = sourceCache;
-                if (cache == null ||
-                        !cache.getClass().getName().equals(qualifiedName)) {
-                    synchronized (CacheFactory.class) {
-                        if (cache == null ||
-                                !cache.getClass().getName().equals(qualifiedName)) {
-                            logger.debug("getSourceCache(): implementation " +
-                                    "changed; creating a new instance");
-                            try {
-                                Class implClass = Class.forName(qualifiedName);
-                                cache = (SourceCache) implClass.newInstance();
-                                setSourceCache(cache);
-                            } catch (ClassNotFoundException e) {
-                                cache = null;
-                                logger.error("Class not found: {}", e.getMessage());
-                            } catch (IllegalAccessException | InstantiationException e) {
-                                cache = null;
-                                logger.error(e.getMessage());
-                            }
+        final String unqualifiedName = config.getString(Key.SOURCE_CACHE, "");
+
+        if (!unqualifiedName.isEmpty()) {
+            final String qualifiedName = getQualifiedName(unqualifiedName);
+            cache = sourceCache;
+            if (cache == null ||
+                    !cache.getClass().getName().equals(qualifiedName)) {
+                synchronized (CacheFactory.class) {
+                    if (cache == null ||
+                            !cache.getClass().getName().equals(qualifiedName)) {
+                        LOGGER.debug("getSourceCache(): implementation " +
+                                "changed; creating a new instance");
+                        try {
+                            Class<?> implClass = Class.forName(qualifiedName);
+                            cache = (SourceCache)
+                                    implClass.getDeclaredConstructor().newInstance();
+                            setSourceCache(cache);
+                        } catch (ClassNotFoundException e) {
+                            cache = null;
+                            LOGGER.error("Class not found: {}", e.getMessage());
+                        } catch (NoSuchMethodException |
+                                IllegalAccessException |
+                                InstantiationException |
+                                InvocationTargetException e) {
+                            cache = null;
+                            LOGGER.error(e.getMessage());
                         }
                     }
                 }
@@ -145,55 +150,75 @@ public abstract class CacheFactory {
         return cache;
     }
 
+    private static String getQualifiedName(String unqualifiedName) {
+        return unqualifiedName.contains(".") ?
+                unqualifiedName :
+                CacheFactory.class.getPackage().getName() + "." +
+                        unqualifiedName;
+    }
+
+    private static boolean isDerivativeCacheEnabled() {
+        final Configuration config = Configuration.getInstance();
+        return config.getBoolean(Key.DERIVATIVE_CACHE_ENABLED, false);
+    }
+
     /**
-     * Shuts down any existing derivative cache and removes its shutdown hook,
-     * then sets the current derivative cache to the given instance and adds
-     * a shutdown hook for it; then initializes it.
+     * Shuts down any existing derivative cache, then sets the current
+     * derivative cache to the given instance and initializes it.
      *
      * @param cache Derivative cache to use.
      */
     private static synchronized void setDerivativeCache(DerivativeCache cache) {
-        final Runtime runtime = Runtime.getRuntime();
-        if (derivativeCacheShutdownHook != null) {
-            runtime.removeShutdownHook(derivativeCacheShutdownHook);
-        }
         if (derivativeCache != null) {
-            logger.debug("setDerivativeCache(): calling Cache.shutdown()");
+            LOGGER.debug("setDerivativeCache(): shutting down the current instance");
             derivativeCache.shutdown();
         }
 
         derivativeCache = cache;
-        derivativeCacheShutdownHook =
-                new Thread(() -> derivativeCache.shutdown());
-        runtime.addShutdownHook(derivativeCacheShutdownHook);
 
-        logger.debug("setDerivativeCache(): calling Cache.initialize()");
+        LOGGER.debug("setDerivativeCache(): initializing the new instance");
         derivativeCache.initialize();
     }
 
     /**
-     * Shuts down any existing source cache and removes its shutdown hook,
-     * then sets the current source cache to the given instance and adds
-     * a shutdown hook for it; then initializes it.
+     * Shuts down any existing source cache, then sets the current source cache
+     * to the given instance and initializes it.
      *
      * @param cache Source cache to use.
      */
     private static synchronized void setSourceCache(SourceCache cache) {
-        final Runtime runtime = Runtime.getRuntime();
-        if (sourceCacheShutdownHook != null) {
-            runtime.removeShutdownHook(sourceCacheShutdownHook);
-        }
         if (sourceCache != null) {
-            logger.debug("setSourceCache(): calling Cache.shutdown()");
+            LOGGER.debug("setSourceCache(): shutting down the current instance");
             sourceCache.shutdown();
         }
 
         sourceCache = cache;
-        sourceCacheShutdownHook = new Thread(sourceCache::shutdown);
-        runtime.addShutdownHook(sourceCacheShutdownHook);
 
-        logger.debug("setSourceCache(): calling Cache.initialize()");
+        LOGGER.debug("setSourceCache(): initializing the new instance");
         sourceCache.initialize();
     }
+
+    public static synchronized void shutdownCaches() {
+        shutdownDerivativeCache();
+        shutdownSourceCache();
+    }
+
+    private static synchronized void shutdownDerivativeCache() {
+        LOGGER.debug("Shutting down the derivative cache");
+        if (derivativeCache != null) {
+            derivativeCache.shutdown();
+            derivativeCache = null;
+        }
+    }
+
+    private static synchronized  void shutdownSourceCache() {
+        LOGGER.debug("Shutting down the source cache");
+        if (sourceCache != null) {
+            sourceCache.shutdown();
+            sourceCache = null;
+        }
+    }
+
+    private CacheFactory() {}
 
 }
