@@ -1,23 +1,18 @@
 package edu.illinois.library.cantaloupe.operation.overlay;
 
 import edu.illinois.library.cantaloupe.config.Configuration;
-import edu.illinois.library.cantaloupe.config.ConfigurationFactory;
 import edu.illinois.library.cantaloupe.config.Key;
-import edu.illinois.library.cantaloupe.image.Format;
 import edu.illinois.library.cantaloupe.image.Identifier;
-import edu.illinois.library.cantaloupe.operation.OperationList;
-import edu.illinois.library.cantaloupe.script.ScriptEngineFactory;
+import edu.illinois.library.cantaloupe.operation.Color;
+import edu.illinois.library.cantaloupe.resource.RequestContext;
+import edu.illinois.library.cantaloupe.script.DelegateProxy;
+import edu.illinois.library.cantaloupe.script.DelegateProxyService;
 import edu.illinois.library.cantaloupe.test.BaseTest;
 import edu.illinois.library.cantaloupe.test.TestUtil;
 import org.junit.Before;
 import org.junit.Test;
 
-import java.awt.Color;
-import java.awt.Dimension;
-import java.io.File;
-import java.net.URL;
-import java.util.HashMap;
-import java.util.Map;
+import java.net.URI;
 
 import static org.junit.Assert.*;
 
@@ -29,10 +24,10 @@ public class OverlayServiceTest extends BaseTest {
     public void setUp() throws Exception {
         super.setUp();
 
-        Configuration config = ConfigurationFactory.getInstance();
+        Configuration config = Configuration.getInstance();
         config.setProperty(Key.DELEGATE_SCRIPT_ENABLED, true);
         config.setProperty(Key.DELEGATE_SCRIPT_PATHNAME,
-                TestUtil.getFixture("delegates.rb").getAbsolutePath());
+                TestUtil.getFixture("delegates.rb").toString());
         config.setProperty(Key.OVERLAY_ENABLED, true);
         config.setProperty(Key.OVERLAY_STRATEGY, "BasicStrategy");
         config.setProperty(Key.OVERLAY_TYPE, "image");
@@ -51,37 +46,21 @@ public class OverlayServiceTest extends BaseTest {
 
     @Test
     public void testNewOverlayWithBasicImageStrategy() throws Exception {
-        final OperationList opList = new OperationList();
-        final Dimension fullSize = new Dimension(0, 0);
-        final URL requestUrl = new URL("http://example.org/");
-        final Map<String,String> requestHeaders = new HashMap<>();
-        final String clientIp = "";
-        final Map<String,String> cookies = new HashMap<>();
-
-        ImageOverlay overlay = (ImageOverlay) instance.newOverlay(
-                opList, fullSize, requestUrl, requestHeaders, clientIp, cookies);
-        assertEquals(new File("/dev/null"), overlay.getFile());
+        ImageOverlay overlay = (ImageOverlay) instance.newOverlay(null);
+        assertEquals(new URI("file:///dev/null"), overlay.getURI());
         assertEquals(10, overlay.getInset());
         assertEquals(Position.TOP_LEFT, overlay.getPosition());
     }
 
     @Test
     public void testNewOverlayWithBasicStringStrategy() throws Exception {
-        Configuration config = ConfigurationFactory.getInstance();
+        Configuration config = Configuration.getInstance();
         config.setProperty(Key.OVERLAY_TYPE, "string");
         config.setProperty(Key.OVERLAY_STRING_STRING, "cats");
         config.setProperty(Key.OVERLAY_STRING_COLOR, "green");
         instance = new OverlayService();
 
-        final OperationList opList = new OperationList();
-        final Dimension fullSize = new Dimension(0, 0);
-        final URL requestUrl = new URL("http://example.org/");
-        final Map<String,String> requestHeaders = new HashMap<>();
-        final String clientIp = "";
-        final Map<String,String> cookies = new HashMap<>();
-
-        StringOverlay overlay = (StringOverlay) instance.newOverlay(
-                opList, fullSize, requestUrl, requestHeaders, clientIp, cookies);
+        StringOverlay overlay = (StringOverlay) instance.newOverlay(null);
         assertEquals("cats", overlay.getString());
         assertEquals(10, overlay.getInset());
         assertEquals(Position.TOP_LEFT, overlay.getPosition());
@@ -93,18 +72,14 @@ public class OverlayServiceTest extends BaseTest {
             throws Exception {
         instance.setStrategy(OverlayService.Strategy.DELEGATE_METHOD);
 
-        final OperationList opList = new OperationList();
-        opList.setIdentifier(new Identifier("image"));
-        opList.setOutputFormat(Format.JPG);
-        final Dimension fullSize = new Dimension(100, 100);
-        final URL requestUrl = new URL("http://example.org/");
-        final Map<String,String> requestHeaders = new HashMap<>();
-        final String clientIp = "";
-        final Map<String,String> cookies = new HashMap<>();
+        final RequestContext context = new RequestContext();
+        context.setIdentifier(new Identifier("image"));
 
-        ImageOverlay overlay = (ImageOverlay) instance.newOverlay(
-                opList, fullSize, requestUrl, requestHeaders, clientIp, cookies);
-        assertEquals(new File("/dev/cats"), overlay.getFile());
+        DelegateProxyService service = DelegateProxyService.getInstance();
+        DelegateProxy proxy = service.newDelegateProxy(context);
+
+        ImageOverlay overlay = (ImageOverlay) instance.newOverlay(proxy);
+        assertEquals(new URI("file:///dev/cats"), overlay.getURI());
         assertEquals(5, overlay.getInset());
         assertEquals(Position.BOTTOM_LEFT, overlay.getPosition());
     }
@@ -114,37 +89,31 @@ public class OverlayServiceTest extends BaseTest {
             throws Exception {
         instance.setStrategy(OverlayService.Strategy.DELEGATE_METHOD);
 
-        final OperationList opList = new OperationList();
-        opList.setIdentifier(new Identifier("string"));
-        opList.setOutputFormat(Format.JPG);
-        final Dimension fullSize = new Dimension(100, 100);
-        final URL requestUrl = new URL("http://example.org/");
-        final Map<String,String> requestHeaders = new HashMap<>();
-        final String clientIp = "";
-        final Map<String,String> cookies = new HashMap<>();
+        final RequestContext context = new RequestContext();
+        context.setIdentifier(new Identifier("string"));
 
-        StringOverlay overlay = (StringOverlay) instance.newOverlay(
-                opList, fullSize, requestUrl, requestHeaders, clientIp, cookies);
+        DelegateProxyService service = DelegateProxyService.getInstance();
+        DelegateProxy proxy = service.newDelegateProxy(context);
+
+        StringOverlay overlay = (StringOverlay) instance.newOverlay(proxy);
         assertEquals("dogs\ndogs", overlay.getString());
         assertEquals(5, overlay.getInset());
         assertEquals(Position.BOTTOM_LEFT, overlay.getPosition());
     }
 
     @Test
-    public void testNewOverlayWithScriptStrategyReturningFalse() throws Exception {
+    public void testNewOverlayWithScriptStrategyReturningNil()
+            throws Exception {
         instance.setStrategy(OverlayService.Strategy.DELEGATE_METHOD);
 
-        final OperationList opList = new OperationList();
-        opList.setIdentifier(new Identifier("bogus"));
-        opList.setOutputFormat(Format.JPG);
-        final Dimension fullSize = new Dimension(100, 100);
-        final URL requestUrl = new URL("http://example.org/");
-        final Map<String,String> requestHeaders = new HashMap<>();
-        final String clientIp = "";
-        final Map<String,String> cookies = new HashMap<>();
+        final Identifier identifier = new Identifier("bogus");
+        final RequestContext context = new RequestContext();
+        context.setIdentifier(identifier);
 
-        Overlay overlay = instance.newOverlay(opList, fullSize,
-                requestUrl, requestHeaders, clientIp, cookies);
+        DelegateProxyService service = DelegateProxyService.getInstance();
+        DelegateProxy proxy = service.newDelegateProxy(context);
+
+        Overlay overlay = instance.newOverlay(proxy);
         assertNull(overlay);
     }
 
